# CppFunctionalEcs

./: .directory  CMakeLists.txt  README.md
api/include/: Component.h  Component.hpp  ComponentType.h  ComponentType.hpp  Ecs.h  EcsApiStatusEnums.hpp  EcsComponent.h  EcsComponentType.h  EcsEntity.h  EcsEnums.hpp  EcsMacros.hpp  EcsSystem.h  Entity.h  Entity.hpp  EntityDefinition.hpp  Test.hpp
api/src/: Component.cpp  ComponentType.cpp  EcsEnums.cpp  Entity.cpp
test/include/: FloatComponent.hpp  FloatingComponent.hpp  PositionComponent.h  PositionComponent.hpp
test/src/: FloatingComponent.cpp  Main.c  Main.cpp  PositionComponent.c  PositionComponent.cpp  README.md  Test.c  Test.cpp
